OCaml 4.13 maintenance branch
-----------------------------

### Runtime system:

* #10723: do not use `-flat-namespace` linking for macOS.
  (Carlo Cabrera, review by Damien Doligez)

### Bug fixes:

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
  code or an OCaml thread stops.
  (Xavier Leroy, review by David Allsopp, Florian Angeletti and Damien Doligez)

- #11358, #11378: Refactor the initialization of bytecode threading.
  This avoids a "dangling pointer" warning of GCC 12.1.
  (Xavier Leroy, report by Armaël Guéneau, review by Gabriel Scherer)


OCaml 4.13.1 (01 October 2021)
--------------------------------

### Bug fixes

- #10661, #10662: fix a bug with classes named "row"
  (Gabriel Scherer, report by Nicolás Ojeda Bär)


OCaml 4.13.0 (24 September 2021)
--------------------------------

### Progress towards Multicore:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,
   Anmol Sahoo, Mark Shinwell, review by Damien Doligez, Xavier Leroy,
   and Mark Shinwell)

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

### Language features (highlights):

- #9584, #7074: Allow to name existentials in pattern-matching
  One can now write '(Cstr (type a) (x, y : int * a))' to give a name to
  existentials freshly introduced by GADT constructors.
  (Jacques Garrigue, review by Leo White and Gabriel Scherer)

### Compiler user-interface and warnings (highlights):

- #9331: Improve error messages for functor application and functor types.
  (Florian Angeletti and Gabriel Radanne, review by Leo White)
