@@ -20,8 +20,7 @@ static int shutdown_command_table[] = {
   0, 1, 2
 };
 
-CAMLprim value unix_shutdown(sock, cmd)
-     value sock, cmd;
+CAMLprim value unix_shutdown(value sock, value cmd)
 {
   if (shutdown(Socket_val(sock),
                shutdown_command_table[Int_val(cmd)]) == -1) {
