@@ -24,8 +24,7 @@
 #include <process.h>
 #include <stdio.h>
 
-CAMLprim value win_system(cmd)
-     value cmd;
+CAMLprim value win_system(value cmd)
 {
   int ret;
   value st;
