@@ -38,8 +38,7 @@ intnat caml_icount = 0;
 
 void caml_stop_here () {}
 
-void caml_disasm_instr(pc)
-     code_t pc;
+void caml_disasm_instr(code_t pc)
 {
   int instr = *pc;
   printf("%6ld  %s", (long) (pc - caml_start_code),
